[package]
name = "FactoryGame_Ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
rand = "*"
bracket-noise = "0.8.2"


[dependencies.bracket-bevy]
git="https://github.com/amethyst/bracket-lib.git"
branch="bevy"